--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "await-spawn": "^4.0.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^6.0.6",
     "gradient-string": "^2.0.1",
     "moment": "^2.29.3"
